fix: Change breakpoints for layout change; use row gap for vertical spacing

--- a/app/(frontend)/components/PageHero/PageHero.module.scss
+++ b/app/(frontend)/components/PageHero/PageHero.module.scss
@@ -50,17 +50,12 @@
     text-align: center;
 
     @include media-breakpoint-up(md) {
-      margin-bottom: to-rem(32);
       text-align: left;
     }
   }
 
   &Right {
     @include columns(1, -1);
-
-    @include media-breakpoint-down(md) {
-      margin-bottom: to-rem(24);
-    }
 
     @include media-breakpoint-up(lg) {
       @include spanColumns(6, 7);
@@ -82,7 +77,7 @@
   padding-bottom: to-rem(16);
   text-align: center;
 
-  @include media-breakpoint-down(md) {
+  @include media-breakpoint-down(lg) {
     & > a {
       margin-right: auto;
       margin-left: auto;
